<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager_profile_images"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:visibility="visible">

            </androidx.viewpager.widget.ViewPager>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/button_addimg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding_half"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@+id/button_edit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/prof_img_def" />

                <ImageButton
                    android:id="@+id/button_facebook"
                    android:layout_width="33dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding_half"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@+id/button_addimg"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/com_facebook_button_icon_white" />

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/comma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/comma"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toEndOf="@+id/text_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="25 (age)"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toEndOf="@+id/comma"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/bio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_name" />

                <TextView
                    android:id="@+id/text_bio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="Some very long text that no one really cares about (BIO)"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bio" />

                <TextView
                    android:id="@+id/something_else"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="Something Else?"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_bio" />

                <ImageButton
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding_half"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_edit_black_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fabPingAccept"
                    app:srcCompat="@drawable/round_chat_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabPingAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fabPingReject"
                    app:srcCompat="@drawable/ic_iconmonstr_check_mark_1" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabPingReject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/com_facebook_tooltip_black_xout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>